--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8080
+# MONGODB_CNN=mongodb://localhost:27017/cafeDB
+MONGODB_CNN=mongodb+srv://yicxela_node:LM3DyvVlTa0mDXG4@micloster.y9rslwr.mongodb.net/cafeDB
